# wasmedge-quickjs

./: .gitignore  Cargo.toml  LICENSE-QuickJS.txt  README.md  build.rs  demo.js
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: examples.yml
async_runtime/: Cargo.toml
async_runtime/src/: main.rs
async_wasmedge_quickjs/: Cargo.toml
async_wasmedge_quickjs/src/: async_net.rs  main.rs  wasmedge_async_sock.rs
example_js/: add.js  demo.js  fs.js  ggml_chat.js  hello.js  http.js  http_demo.js  http_server_demo.js  image.js  img_demo.js  wasi_http_client.js  wasi_http_echo.js  wasi_http_fetch.js  wasi_http_server.js  wasi_https_fetch.js  wasi_net_client.js  wasi_net_echo.js  wasi_net_timeout_echo.js
example_js/create-react-app-ssr/: .babelrc.json  package-lock.json  package.json  rollup.server.js  webpack.server.js
example_js/es6_module_demo/: demo.js  module_def.js  module_def1.js  module_def_async.js  module_use.js
example_js/module_demo/: demo.js
example_js/node/: main.mjs
example_js/react18_ssr/: main.mjs  package-lock.json  package.json  rollup.config.js
example_js/react_ssr/: main.js  package.json  rollup.config.js
example_js/react_ssr_stream/: main.mjs  package-lock.json  package.json  rollup.config.js
example_js/simple_common_js_demo/: es6_code_module.js  file_module.js  npm_main.js  package.json  rollup.config.js
example_js/tensorflow_demo/: main.js
example_js/tensorflow_lite_demo/: aiy_food_V1_labelmap.txt  main.js  wasi_nn_main.js
examples/: custom_js_module.rs  embed_js.rs  embed_use_module.rs  js_extend.rs
examples/embed_js/: Cargo.toml  README.md
examples/embed_js_module/: Cargo.toml  README.md  async_demo.js
examples/embed_rust_module/: Cargo.toml  README.md
examples/embed_use_es6_module/: Cargo.toml  es6_module_demo.js
examples/host_function/: Cargo.toml  README.md
internal/: events.js  http.js  stream.js  string_decoder.js
js_lib/: http.js  require.js
lib/: binding.rs
modules/: ACKNOWLEDGEMENT.md  assert.js  buffer.js  crypto.js  encoding.js  events.js  fs.js  http.js  os.js  path.js  process.js  querystring.js  readline.js  stream.js  timers.js  tty.js  url.js  util.js  whatwg_url.js
modules/fmt/: printf.js
modules/fs/: promises.js
modules/internal/: assert.js  constants.js  errors.js  fs.js  normalize_encoding.js  options.js  tty.js  url.js  util.js  validators.js
modules/internal_binding/: constants.js  util.js  uv.js
modules/stream/: consumers.js  promises.js
modules/timers/: promises.js
modules/util/: types.js
scripts/: get_cert.sh
src/: lib.rs  main.rs
src/event_loop/: certs.rs  mod.rs  poll.rs  wasi_fs.rs  wasi_sock.rs
src/internal_module/: core.rs  crypto.rs  encoding.rs  event_loop_module.rs  fs.rs  http_module.rs  img_module.rs  mod.rs  os.rs  tensorflow_module.rs  tty.rs  wasi_net_module.rs
src/quickjs_sys/: host_fun_demo_module.rs  http.rs  http_module.rs  img_module.rs  js_class.rs  js_module.rs  js_promise.rs  macros.rs  mod.rs  require_module.rs  tensorflow_module.rs
test/: common.js
test/.tmp.0/: append-sync.txt  append-sync2.txt  append-sync4.txt
test/assert/: test-assert.js
test/common/: fixtures.js  tmpdir.js
test/crypto/: test-crypto-aes-wrap.js  test-crypto-async-sign-verify.js  test-crypto-authenticated-stream.js  test-crypto-authenticated.js  test-crypto-binary-default.js  test-crypto-certificate.js  test-crypto-cipher-decipher.js  test-crypto-cipheriv-decipheriv.js  test-crypto-classes.js  test-crypto-des3-wrap.js  test-crypto-dh-constructor.js  test-crypto-dh-curves.js  test-crypto-dh-leak.js  test-crypto-dh-modp2-views.js  test-crypto-dh-modp2.js  test-crypto-dh-odd-key.js  test-crypto-dh-padding.js  test-crypto-dh-shared.js  test-crypto-dh-stateless.js  test-crypto-dh.js  test-crypto-domain.js  test-crypto-domains.js  test-crypto-ecb.js  test-crypto-ecdh-convert-key.js  test-crypto-fips.js  test-crypto-from-binary.js  test-crypto-getcipherinfo.js  test-crypto-hash-stream-pipe.js  test-crypto-hash.js  test-crypto-hkdf.js  test-crypto-hmac.js  test-crypto-key-objects-messageport.js  test-crypto-key-objects.js  test-crypto-keygen-deprecation.js  test-crypto-keygen.js  test-crypto-lazy-transform-writable.js  test-crypto-modp1-error.js  test-crypto-op-during-process-exit.js  test-crypto-padding-aes256.js  test-crypto-padding.js  (+21 more)
test/fs/: test-fs-access.js  test-fs-append-file-sync.js  test-fs-append-file.js  test-fs-assert-encoding-error.js  test-fs-buffer.js  test-fs-buffertype-writesync.js  test-fs-chmod-mask.js  test-fs-chmod.js  test-fs-chown-type-check.js  test-fs-close-errors.js  test-fs-close.js  test-fs-constants.js  test-fs-copyfile-respect-permissions.js  test-fs-copyfile.js  test-fs-cp.js  test-fs-empty-readStream.js  test-fs-error-messages.js  test-fs-exists.js  test-fs-existssync-false.js  test-fs-fchmod.js  test-fs-fchown.js  test-fs-filehandle-use-after-close.js  test-fs-filehandle.js  test-fs-fmap.js  test-fs-fsync.js  test-fs-lchmod.js  test-fs-lchown.js  test-fs-link.js  test-fs-long-path.js  test-fs-make-callback.js  test-fs-makeStatsCallback.js  test-fs-mkdir-mode-mask.js  test-fs-mkdir-recursive-eaccess.js  test-fs-mkdir-rmdir.js  test-fs-mkdir.js  test-fs-mkdtemp-prefix-check.js  test-fs-mkdtemp.js  test-fs-non-number-arguments-throw.js  test-fs-null-bytes.js  test-fs-open-flags.js  (+174 more)
test/path/: test-path-basename.js  test-path-dirname.js  test-path-extname.js  test-path-isabsolute.js  test-path-join.js  test-path-makelong.js  test-path-normalize.js  test-path-parse-format.js  test-path-posix-exists.js  test-path-posix-relative-on-windows.js  test-path-relative.js  (+4 more)
tests/: test-crypto.rs  test-fs.rs  test-path.rs
wasmedge_c/: demo_wasmedge.c  hello.c  wasmedge.h
(+96 files in other folders)
