[package]
name = "wasmedge_quickjs"
version = "0.5.0-alpha"
authors = ["csh <458761603@qq.com>", "Michael Yuan <michael@secondstate.io>"]
description = "Create your own JavaScript runtime and extension APIs for WasmEdge."
repository = "https://github.com/second-state/wasmedge-quickjs"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://www.secondstate.io/articles/run-javascript-in-webassembly-with-wasmedge/"
homepage = "https://www.secondstate.io/"
edition = "2018"
exclude = ["example_js/*", "examples/*"]

[dependencies]
argparse = "0.2.2"
image = { version = "0.23.6", default-features = false, features = [
    "jpeg",
    "png",
], optional = true }
imageproc = { version = "0.22.0", optional = true }
libc = "0.2"
url = "2.2.2"
lazy_static = "1.4"
encoding = "0.2"
wasmedge_wasi_socket = { version = "0.5", features = ["wasi_poll"] }
tokio_wasi = { version = "1.25.2", features = ["full"] }
log = "0.4.19"
env_logger = "0.10.0"
wasmedge_rustls_api = { version = "0.1.1", features = [
    "tokio_async",
], optional = true }

[features]
default = ["tls"]
tls = ["wasmedge_rustls_api"]
img = ["image", "imageproc"]
tensorflow = ["img"]
wasi_nn = ["img"]
cjs = []
