[package]
name = "wasmedge_quickjs"
version = "0.6.0-alpha"
authors = ["csh <458761603@qq.com>", "Michael Yuan <michael@secondstate.io>"]
description = "Create your own JavaScript runtime and extension APIs for WasmEdge."
repository = "https://github.com/second-state/wasmedge-quickjs"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://www.secondstate.io/articles/run-javascript-in-webassembly-with-wasmedge/"
homepage = "https://www.secondstate.io/"
edition = "2018"
exclude = ["example_js/*", "examples/*"]

[dependencies]
argparse = "0.2.2"
image = { version = "0.23.6", default-features = false, features = [
    "jpeg",
    "png",
], optional = true }
imageproc = { version = "0.22.0", optional = true }
libc = "0.2"
url = "2.2.2"
lazy_static = "1.4"
encoding = "0.2"
wasmedge_wasi_socket = { version = "0.5", features = ["wasi_poll"] }
tokio_wasi = { version = "1.25.2", features = ["full"] }
log = "0.4.19"
env_logger = "0.10.0"

rustls = { version = "0.21.0", optional = true }
tokio-rustls-wasi = { version = "0.24.1", optional = true }
webpki-roots = { version = "0.25.0", optional = true }
crypto-wasi = { version = "0.1.1", optional = true }

chat-prompts = { version = "0.3", optional = true }
wasi-nn = { git = "https://github.com/second-state/wasmedge-wasi-nn", branch = "ggml", optional = true }
endpoints = { version = "0.2", optional = true }

[features]
default = ["tls"]
tls = ["rustls", "tokio-rustls-wasi", "webpki-roots"]
img = ["image", "imageproc"]
tensorflow = ["img"]
wasi_nn = ["img"]
ggml = ["chat-prompts", "dep:wasi-nn", "endpoints"]
cjs = []
nodejs_crypto = ["crypto-wasi"]
