[package]
name = "async_runtime"
version = "0.1.0"
authors = ["csh <458761603@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.30"
wasmtime-wasi = { version = "0.30", features = ["tokio"] }
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0"
env_logger = "0.9.0"
log = "0.4.6"