[package]
name = "async_wasmedge_quickjs"
version = "0.1.0"
authors = ["csh <458761603@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge_quickjs = { path = "..", default_features = false }
lazy_static = "1.4.0"